<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_organizer_profile"
        android:title="My Profile"
        android:icon="@drawable/ic_profile_placeholder" />
    <item
        android:id="@+id/nav_create_event"
        android:title="Create an Event"
        android:icon="@drawable/ic_add_event" />

    <item
        android:id="@+id/nav_edit_facility"
        android:title="My Facility Profile"
        android:icon="@drawable/ic_facility" />

    <item
        android:id="@+id/nav_my_events"
        android:title="My Created Events"
        android:icon="@drawable/ic_event" />

    <item
        android:id="@+id/nav_manage_media"
        android:visible="false"
        android:title="Manage Media"
        android:icon="@android:drawable/ic_menu_gallery" />
    <item
        android:id="@+id/nav_manage_users"
        android:visible="false"
        android:title="Manage Users"
        android:icon="@drawable/ic_profile_placeholder" />

</menu>